# ai-brain-starter

./: .driftignore.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  EXAMPLES.md  OPTIMIZE.md  README.md  RELIABILITY_MANIFESTO.md  SECURITY.md  SKILL.md  bootstrap.ps1  bootstrap.sh  floors.md  footprint-budgets.json  hooks.json
.agents/: product-marketing-context.md.example
.claude-plugin/: marketplace.json  plugin.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  free-tier-allowlist.txt
agentic-os/: INSTALL.sh  README.md
commands/: daily-journal.md  deconstruct.md  diagnose.md  evolve.md  graphify.md  humanizer.md  insights.md  instinct-export.md  instinct-import.md  meeting-todos.md  nano-banana.md  patterns.md  repurpose-talk.md  second-brain-mapping.md  setup-vault-types.md
docs/: AGENTS.md  AUTOMATION.md  BACKFILL_PROMPT.md  BACKUP.md  BUILD_STANDARDS.md  CHANGELOG.md  CHANGELOG_archive_2026Q1.md  CHOKEPOINT_GUARD_PATTERN.md  CLOUD_SYNC.md  CORPORATE_PROFILE.md  COWORK_PLUGIN_PACKAGING.md  COWORK_PROJECTS.md  DOGFOOD.md  ENTERPRISE_REFERENCE.md  EXISTING-IMPL-AUDIT.md  GRAPHIFY_RUNBOOK.md  HEALTH_ARTICLE_PROMPT.md  HOOKS_INSTALL.md  HOOK_FLEET_RESOURCE_GOVERNANCE.md  INSTALL_DEMO.md  LLM_RAILS_QUICKSTART.md  LOVE_LANGUAGE_HOOK.md  MAINTENANCE.md  MCP_BUILD_RUNBOOK.md  MCP_STACK.md  MEMORY_SYSTEM.md  OPTIMIZE.md  POWER_TOOLS.md  PROPOSAL_PDF_WORKFLOW.md  QUARTERLY-RUNBOOK.md  RECOMMENDED_SKILL_OVERRIDES.md  RELEASES.md  RELEASE_PROCESS.md  SESSION_CLOSE.md  SKILLS.md  TODO_SYSTEM.md  TOKEN_OPTIMIZATION.md  VAULT_WORKTREE_MELT.md  context-budget.md  instinct-engine.md  (+1 more)
floors/: Acceptance.md  Anger.md  Apathy.md  Belonging.md  Boredom.md  Compassion.md  Confusion.md  Contempt.md  Courage.md  Desire.md  Disappointment.md  Disgust.md  Embarrassment.md  Excitement.md  Fear.md  Frustration.md  Gratitude.md  Grief.md  Guilt.md  High Floors.md  Hope.md  Humility.md  Hurt.md  Joy.md  Loneliness.md  Love.md  Low Floors.md  Middle Floors.md  Neutrality.md  Peace.md  Pride.md  Reason.md  Resignation.md  Shame.md  The High-Rise Series.md  Trust.md  Willingness.md  Wonder.md
for-teams/: README.md  team-workflows.md  why-teams-are-different.md  working-with-me.md
git-hooks/: guard-session-artifacts-on-default-branch.sh  pre-commit-template.sh  scrub-personal-tokens.txt.example  scrub-public-repos.txt.example
hooks/: SDD-CACHE.md  agent-briefing-check.py  auto-capture-public-ships.py  block-branch-switch-with-untracked-build.py  block-claude-mcp-inline-secret.py  block-mcp-config-inline-secret.py  block-raw-vault-git.py  (+104 more)
services/health-mcp/: .env.example  LICENSE  README.md  SETUP.md  analytics.py  coach.py  cycle.py  db.py  fitbit_client.py  google_health_client.py  hk_types.py  labs.py  live_tcp.py  main.py  oura_client.py  parse_csv.py  parse_xml.py  pyproject.toml  scores.py  shortcut_normalize.py  vault_aware.py  vendor_setup.py  voice_bridge.py
services/health-mcp/fixtures/: sample_export.xml  sample_labs.csv  sample_v02.xml
services/health-mcp/shortcut/: README.md
services/health-mcp/tests/: test_google_health.py  test_shortcut_bridge.py  test_smoke.py  test_v02.py  test_v03.py  test_v04.py  test_v05_hooks.py  test_v07_analytics.py
(+643 files in other folders)
