[project]
name = "health-mcp"
version = "0.4.0"
description = "Health MCP for the ai-brain-starter substrate. Multi-vendor (Apple Health + Oura Ring + Fitbit) ingestion with shared DuckDB schema. Full HealthKit surface. Open scoring algorithms. Vault-aware tools that pair biometrics + cycle phase + symptoms with Floor tags. OS-aware setup wizard. Coach state layer (progressive overload, deload weeks, cycle-aware prescription, somatic pre-check)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "ai-brain-starter contributors"},
]
keywords = ["mcp", "apple-health", "healthkit", "duckdb", "claude", "obsidian"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastmcp>=3.2.3",
  "duckdb>=1.0.0",
  "lxml>=5.0.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
  "main.py",
  "db.py",
  "hk_types.py",
  "parse_xml.py",
  "parse_csv.py",
  "live_tcp.py",
  "scores.py",
  "vault_aware.py",
  "cycle.py",
  "labs.py",
  "voice_bridge.py",
  "oura_client.py",
  "fitbit_client.py",
  "vendor_setup.py",
  "coach.py",
]
